Update thesis page.

--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@ systems easier to understand.
 <p>
 <a href="publications.html">Publication List</a>.
 <br>
-<a href="cv.html">Curriculum Vitae</a>.
+<a href="cv.html">Curriculum Vitae</a>. (PhD MIT EECS, <a href="thesis.html">thesis</a>.)
 <br>
 Publication pages on
 <a href="http://dblp.uni-trier.de/pers/hd/b/Bau:David">Dblp</a>
