Add links to thesis.

--- a/src/cv.html
+++ b/src/cv.html
@@ -119,7 +119,7 @@ to understand what deep networks represent when they learn how to learn.
 <div class="main item">
 <strong>Massachusetts Institute of Technology</strong>, Cambridge, MA<br>
 Ph.D. in Electrical Engineering and Computer Science<br>
-Thesis: Dissection of Deep Neural Networks<br>
+Thesis: <a href="https://dissection.csail.mit.edu/">Dissection of Deep Neural Networks</a><br>
 Advisor: Antonio Torralba<br>
 Anticipated graduation: September 2021
 </div>
