For northeastern, use local video.

--- a/src/index.html
+++ b/src/index.html
@@ -167,14 +167,14 @@ figcaption {
  <div class="namecard">
  <h1><nobr>David Bau</nobr></h1>
  <p class="lead">
- <nobr>Understanding Neural Networks</nobr>
+ <nobr>Interpretable Neural Networks</nobr>
 <address>
- <a href="https://www.csail.mit.edu/about">
- <nobr>MIT Computer Science</nobr> and
- <nobr>Artificial Intelligence Laboratory</nobr></a><br>
+ <a href="https://www.khoury.northeastern.edu/research/">
+ <nobr>Northeastern University </nobr>
+ <nobr>Khoury College of Computer Sciences</nobr></a><br>
  <!-- <nobr>Massachusetts Institute of Technology</nobr><br> -->
  <nobr><script>
-var emn = 'davidbau' + ''.constructor.fromCharCode(1<<6) + 'csail.mit.edu';
+var emn = 'd.bau' + ''.constructor.fromCharCode(1<<6) + 'northeastern.edu';
 document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
  </script></nobr><br>
 </address>
@@ -184,7 +184,10 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <figure class="float-right ml-3 selfpic">
   <!--<img src="family.jpg" class="selfpic">
   <figcaption>David Bau (center) and family:<br>(clockwise) Heidi, Cody, Piper, and Anthony</figcaption>-->
-<iframe id="selfpic-video" width="448" height="252" src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=https://people.csail.mit.edu" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--<iframe id="selfpic-video" width="448" height="252" src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=https://people.csail.mit.edu" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<video controls width="448" height="252" poster="video-poster.jpg" preload="metadata">
+<source src="understanding-video.mp4" type="video/mp4">
+</video>
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
 </figure>
 <p>
