Add some recent collaborators.

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,16 @@ h2, .namecard {
   padding: 30px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+.people a img {
+  width: 120px;
+}
+.people a[href] {
+  display: inline-block;
+  width: 128px;
+  padding: 4px;
+  text-align: center;
+  vertical-align: top;
+}
 .collapse + p, .prologue {
   background-color: white;
   position: relative;
@@ -255,6 +265,114 @@ and <a href="https://scholar.google.com/citations?hl=en&user=CYI6cKgAAAAJ&view_o
 My office at MIT:
 <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Stata 32-383</a>
 </div> <!-- prologue -->
+</div>
+</div>
+<div class="row">
+<div class="col">
+<div class="publication">
+<h2 class="mt-4 mb-3">Current Collaborators and Advisees</h2>
+<input class="collapse" type="checkbox">
+<p class="people">
+<a href="https://audreycui.github.io/">
+<img src="people/audrey.jpg">
+Audrey Cui
+</a>
+<a href="https://mengk.me/">
+<img src="people/kevin.jpg">
+Kevin Meng
+</a>
+<a href="https://joaanna.github.io/">
+<img src="people/joanna.jpg">
+Joanna Materzynska
+</a>
+<a href="https://peterwang512.github.io/">
+<img src="people/shengyu.jpg">
+Sheng-Yu Wang
+</a>
+<a href="http://www.cogconfluence.com/">
+<img src="people/sarah.jpg">
+Sarah Schwettman
+</a>
+<a href="https://evandez.com/">
+<img src="people/evan.jpg">
+Evan Hernandez
+</a>
+<a href="https://www.alexandonian.com/">
+<img src="people/alex.jpg">
+Alex Andonian
+</a>
+<a href="http://people.fas.harvard.edu/~spm253/spandan/index.html">
+<img src="people/spandan.jpg">
+Spandan Madan
+</a>
+<a href="https://skitree.github.io/aspenhopkins/">
+<img src="people/aspen.jpg">
+Aspen Hopkins
+</a>
+<a href="https://likenneth.github.io/">
+<img src="people/kenneth.jpg">
+Kenneth Li
+</a>
+<a href="http://angieboggust.com/">
+<img src="people/angie.jpg">
+Angie Boggust
+</a>
+<!--
+https://dtsipras.com/
+Dimitris Tsipras
+Shibani Santurkar
+-->
+<a href="https://people.csail.mit.edu/jahanian/">
+<img src="people/ali.jpg">
+Ali Jahanian
+</a>
+<a href="http://hendrik.strobelt.com/">
+<img src="people/hen.jpg">
+Hendrik Strobelt
+</a>
+<a href="https://groups.csail.mit.edu/vision/torralbalab/">
+<img src="people/antonio.jpg">
+Prof. Antonio Torralba
+</a>
+<a href="http://www.bewitched.com/">
+<img src="people/martin.jpg">
+Prof. Martin Wattenberg
+</a>
+<a href="https://www.cs.technion.ac.il/~belinkov/">
+<img src="people/yonatan.jpg">
+Prof. Yonatan Belinkov
+</a>
+<a href="https://www.cs.cmu.edu/~junyanz/">
+<img src="people/junyan.jpg">
+Prof. Jun-Yan Zhu
+</a>
+<a href="https://www.mit.edu/~jda/">
+<img src="people/jacob.jpg">
+Prof. Jacob Andreas
+</a>
+<a href="https://www.cs.technion.ac.il/~belinkov/">
+<img src="people/aude.jpg">
+Prof. Aude Oliva
+</a>
+<a href="http://sunai.uoc.edu/~agata/">
+<img src="people/agata.jpg">
+Prof. Agata Lapedriza
+</a>
+<a href="https://vcg.seas.harvard.edu/people">
+<img src="people/hp.jpg">
+Prof. Hanspeter Pfister
+</a>
+<a href="https://arvindsatya.com/">
+<img src="people/arvind.jpg">
+Prof. Arvind Satyanarayan
+</a>
+<!--
+<a href="https://people.csail.mit.edu/madry/">
+<img src="people/madry.jpg">
+Prof. Aleksander Madry
+</a>
+-->
+</div>
 </div>
 </div>
 <div class="row">
