Add information for prospective students.

--- a/src/publications.html
+++ b/src/publications.html
@@ -255,9 +255,7 @@ Saksham Aggarwal, David Anthony Bau, <strong>David Bau</strong>. <a href="https:
         <a href="https://www.linkedin.com/in/david-bau-4b8130/">LinkedIn</a>
         <a href="http://davidbau.com">Personal Blog</a>
         <a href='https://www.google.com/search?safe=off&noj=1&biw=1855&bih=917&q=david+bau+-mp3+-radio+-soundcloud+-minnesota+-tennis+-mx+-romero+-techno+-remix+-spotify+-pandora+-"noah+david"+-"extension+educator"+-"bau+mann"+-"bau+man"+-"bau+mert"+-"bau+telle"+-"bau+xi"+-"behavioural analysis"+-mirador+-atticus&oq=david+bau+-music+-mp3+-radio+-youtube+-soundcloud+-minnesota+-tennis+-"records"+-"noah+david"+-"extension+educator"+-Noguer+-dgbau+-worthington+-"bau+mann"+-"bau+man"+-"bau+telle"+-"bau+xi"+-mirador+-atticus+-gmbh'>Search</a>
-        <a href="https://accessibility.mit.edu/">Accessibility</a>
-        <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Office: Stata 32-383</a>
-        <a href="https://people.csail.mit.edu/davidbau/home/">Home</a>
+        <a href="http://davidbau.com/research/">Home</a>
 </div>
 </div>
 </div>
