--- a/src/index.html
+++ b/src/index.html
@@ -262,15 +262,17 @@ Publication pages on
 <a href="http://dblp.uni-trier.de/pers/hd/b/Bau:David">Dblp</a>
 and <a href="https://scholar.google.com/citations?hl=en&user=CYI6cKgAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>.
 <br>
+<!--
 My office at MIT:
 <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Stata 32-383</a>
+-->
 </div> <!-- prologue -->
 </div>
 </div>
 <div class="row">
 <div class="col">
 <div class="publication">
-<h2 class="mt-4 mb-3">Current Collaborators and Advisees</h2>
+<h2 class="mt-4 mb-3">Current Collaborations</h2>
 <input class="collapse" type="checkbox">
 <p class="people">
 <a href="https://audreycui.github.io/">
@@ -329,6 +331,10 @@ Ali Jahanian
 <a href="http://hendrik.strobelt.com/">
 <img src="people/hen.jpg">
 Hendrik Strobelt
+</a>
+<a href="students.html">
+<img src="people/icon.png">
+Information for Applicants
 </a>
 <a href="https://groups.csail.mit.edu/vision/torralbalab/">
 <img src="people/antonio.jpg">
@@ -665,8 +671,6 @@ Numerical Linear Algebra</a> is the graduate textbook on numerical linear algebr
         <a href="https://www.linkedin.com/in/david-bau-4b8130/">LinkedIn</a>
         <a href="http://davidbau.com">Personal Blog</a>
         <a href='https://www.google.com/search?safe=off&noj=1&biw=1855&bih=917&q=david+bau+-mp3+-radio+-soundcloud+-minnesota+-tennis+-mx+-romero+-techno+-remix+-spotify+-pandora+-"noah+david"+-"extension+educator"+-"bau+mann"+-"bau+man"+-"bau+mert"+-"bau+telle"+-"bau+xi"+-"behavioural analysis"+-mirador+-atticus&oq=david+bau+-music+-mp3+-radio+-youtube+-soundcloud+-minnesota+-tennis+-"records"+-"noah+david"+-"extension+educator"+-Noguer+-dgbau+-worthington+-"bau+mann"+-"bau+man"+-"bau+telle"+-"bau+xi"+-mirador+-atticus+-gmbh'>Search</a>
-        <a href="https://accessibility.mit.edu/">Accessibility</a>
-        <a href="https://whereis.mit.edu/?zoom=16&lat=42.361612839999985&lng=-71.09056785999995&maptype=mit&q=32-383&open=object-32">Office: Stata 32-383</a>
 </div>
 </div>
 </div>
