--- a/src/publications.html
+++ b/src/publications.html
@@ -176,6 +176,18 @@ figcaption {
 <h3 class="main">Conference Papers</h3>
 
 <div class="main pub">
+Shibani Santurkar, Dimitris Tsipras, Mahalaxmi Elango, <b>David Bau</b>, Antonio Torralba, and Aleksander Madry. <a href="https://openreview.net/forum?id=aM7UsuOAzB3">Editing a classifier by rewriting its prediction rules.</a> Advances in Neural Information Processing Systems 34. <nobr>(NeuIPS 2021)</nobr>
+</div>
+<div class="main pub">
+Emma Andrews, <b>David Bau</b>, and Jeremiah Blanchard. <a href="https://ieeexplore.ieee.org/document/9576355">From Droplet to Lilypad: Present and Future of Dual-Modality Environments.</a> 2021 IEEE Symposium on Visual Languages and Human-Centric Computing. <nobr>(VL/HCC 2021)</nobr>
+</div>
+<div class="main pub">
+Sarah Schwettmann, Evan Hernandez, <b>David Bau</b>, Samuel Klein, Jacob Andreas, and Antonio Torralba. <a href="https://visualvocab.csail.mit.edu/">Toward a Visual Concept Vocabulary for GAN Latent Space.</a> Proceedings of the IEEE/CVF International Conference on Computer Vision. <nobr>(ICCV 2021)</nobr>
+</div>
+<div class="main pub">
+Sheng-Yu Wang, <b>David Bau</b>, and Jun-Yan Zhu. <a href="https://peterwang512.github.io/GANSketching/">Sketch Your Own GAN.</a> Proceedings of the IEEE/CVF International Conference on Computer Vision. <nobr>(ICCV 2021)</nobr>
+</div>
+<div class="main pub">
 <b>David Bau</b>, Steven Liu, Tongzhou Wang, Jun-Yan Zhu, and Antonio Torralba. <a href="http://rewriting.csail.mit.edu/">Rewriting a Deep Generative Model.</a>  <em>Proceedings of the European Conference on Computer Vision.</em> <nobr>(ECCV 2020 oral)</nobr>
 </div>
 <div class="main pub">
