--- a/src/index.html
+++ b/src/index.html
@@ -320,9 +320,14 @@ Kenneth Li
 Angie Boggust
 </a>
 <!--
-https://dtsipras.com/
+<a href="https://dtsipras.com/">
+<img src="people/dimitris.jpg">
 Dimitris Tsipras
+</a>
+<a href="https://shibanisanturkar.com/">
+<img src="people/shibani.jpg">
 Shibani Santurkar
+</a>
 -->
 <a href="https://people.csail.mit.edu/jahanian/">
 <img src="people/ali.jpg">
@@ -359,6 +364,10 @@ Prof. Jacob Andreas
 <a href="https://www.cs.technion.ac.il/~belinkov/">
 <img src="people/aude.jpg">
 Prof. Aude Oliva
+</a>
+<a href="https://people.csail.mit.edu/madry/">
+<img src="people/madry.jpg">
+Prof. Aleksander Madry
 </a>
 <a href="http://sunai.uoc.edu/~agata/">
 <img src="people/agata.jpg">
