Link for students.

--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@ models both teach and learn from each other.
 <p>
 Want to come to Boston to work on deep learning with me?
 <a href="https://www.khoury.northeastern.edu/apply/phd-apply/">Apply
-  to Khoury here</a> and <a href="mailto:davidbau@csail.mit.edu"
+  to Khoury here</a> and <a href="students.html"
   >contact me</a> if you are interested in joining as a graduate
 student or postdoc.
 
