Add paper hyperlinks.

--- a/src/cv.html
+++ b/src/cv.html
@@ -302,7 +302,7 @@ Steven Liu, Tongzhou Wang, <strong>David Bau</strong>, Jun-Yan Zhu, and Antonio 
 <strong>David Bau</strong>, Hendrik Strobelt, William Peebles, Jonas Wulff, Bolei Zhou, Jun-Yan Zhu, and Antonio Torralba. <a href="http://ganpaint.io/">Semantic Photo Manipulation with a Generative Image Prior.</a> <em>ACM Transactions on Graphics (TOG) 38, no. 4.</em> <nobr>(SIGGRAPH 2019)</nobr>
 </div>
 <div class="main pub">
-  Didac Suris, Adria Recasens, <strong>David Bau</strong>, David Harwath, James Glass, and Antonio Torralba. <a href="">Learning words by drawing images.</a> <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em>  <nobr>(CVPR 2019)</nobr>
+  Didac Suris, Adria Recasens, <strong>David Bau</strong>, David Harwath, James Glass, and Antonio Torralba. <a href="https://github.com/surisdi/learning-by-drawing">Learning words by drawing images.</a> <em>Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition.</em>  <nobr>(CVPR 2019)</nobr>
 </div>
 <div class="main pub">
 <strong>David Bau</strong>, Jun-Yan Zhu, Hendrik Strobelt, Bolei Zhou, Joshua B. Tenenbaum, William T. Freeman, and Antonio Torralba. <a href="http://gandissect.csail.mit.edu/">GAN Dissection: Visualizing and Understanding Generative Adversarial Networks.</a> <em>Proceedings of the Seventh International Conference on Learning Representations.</em> <nobr>(ICLR 2019)</nobr>
