Halve the video size.

--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
   <figcaption>David Bau (center) and family:<br>(clockwise) Heidi, Cody, Piper, and Anthony</figcaption>-->
 <!--<iframe id="selfpic-video" width="448" height="252" src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=https://people.csail.mit.edu" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 <video controls width="448" height="252" poster="video-poster.jpg" preload="metadata">
-<source src="understanding-video.mp4" type="video/mp4">
+<source src="understanding-video-compact.mp4" type="video/mp4">
 </video>
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
 </figure>
@@ -269,6 +269,24 @@ My office at MIT:
 </div> <!-- prologue -->
 </div>
 </div>
+
+
+<div class="row">
+<div class="col">
+<div class="team">
+<h2 class="mt-4 mb-3">Collaborations</h2>
+
+<input class="collapse" type="checkbox">
+<p>
+<img src="rewriting.gif" class="projpic">
+Interpretability of large language models.
+</p>
+
+</div>
+</div>
+</div>
+
+
 <div class="row">
 <div class="col">
 <div class="publication">
