Add more collaborators, add play button.

--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 <!--<iframe id="selfpic-video" width="448" height="252"
 src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=http://davidbau.com/"
 frameborder="0" allow="accelerometer;encrypted-media;gyroscope;picture-in-picture" allowfullscreen></iframe>-->
-<video controls width="448" height="252" poster="video-poster.jpg" preload="metadata">
+<video controls width="448" height="252" poster="video-poster.png" preload="metadata">
 <source src="understanding-video-compact.mp4" type="video/mp4">
 </video>
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
@@ -300,13 +300,13 @@ Joanna Materzynska
 <img src="people/shengyu.jpg">
 Sheng-Yu Wang
 </a>
-<a href="http://www.cogconfluence.com/">
-<img src="people/sarah.jpg">
-Sarah Schwettman
-</a>
 <a href="https://evandez.com/">
 <img src="people/evan.jpg">
 Evan Hernandez
+</a>
+<a href="https://dblp.org/pid/236/5817.html">
+<img src="people/nadiia.jpg">
+Nadiia Chepurko
 </a>
 <a href="https://www.alexandonian.com/">
 <img src="people/alex.jpg">
@@ -340,6 +340,10 @@ Shibani Santurkar
 <img src="people/ali.jpg">
 Ali Jahanian
 </a>
+<a href="http://www.cogconfluence.com/">
+<img src="people/sarah.jpg">
+Sarah Schwettman
+</a>
 <a href="http://hendrik.strobelt.com/">
 <img src="people/hen.jpg">
 Hendrik Strobelt
@@ -363,6 +367,10 @@ Prof. Yonatan Belinkov
 <a href="https://www.cs.cmu.edu/~junyanz/">
 <img src="people/junyan.jpg">
 Prof. Jun-Yan Zhu
+</a>
+<a href="https://www.eng.ufl.edu/eed/faculty-staff/jeremiah-blanchard/">
+<img src="people/jeremiah.jpg">
+Prof. Jeremiah Blanchard
 </a>
 <a href="https://www.mit.edu/~jda/">
 <img src="people/jacob.jpg">
