--- a/src/cv.html
+++ b/src/cv.html
@@ -275,6 +275,14 @@ innovative programming tool project.
 <h3 class="main">Conference papers</h3>
 
 <div class="main pub">
+Shibani Santurkar, Dimitris Tsipras, Mahalaxmi Elango, <b>David Bau</b>, Antonio Torralba, and Aleksander Madry. <a href="https://github.com/MadryLab/EditingClassifiers">Editing a classifier by rewriting its prediction rules.</a> Advances in Neural Information Processing Systems 34. <nobr>(NeuIPS 2021)</nobr>
+</div>
+
+<div class="main pub">
+Emma Andrews, <b>David Bau</b>, and Jeremiah Blanchard. <a href="https://ieeexplore.ieee.org/document/9576355">From Droplet to Lilypad: Present and Future of Dual-Modality Environments.</a> 2021 IEEE Symposium on Visual Languages and Human-Centric Computing. <nobr>(VL/HCC 2021)</nobr>
+</div>
+
+<div class="main pub">
 Sarah Schwettmann, Evan Hernandez, <strong>David Bau</strong>, Samuel Klein, Jacob Andreas, Antonio Torralba.
 <a href="https://visualvocab.csail.mit.edu/">Toward a Visual Concept Vocabulary for GAN Latent Space</a>  <em>Proceedings of the IEEE International Conference on Compputer Vision.</em> (ICCV 2021)
 </div>
