--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,9 @@ document.write('<a href="mailto:' + emn + '">' + emn + '</a>');
 src="https://www.youtube.com/embed/jT5nYLND7co?controls=1&playsinline=1&loop=1&modestbranding=1&rel=0&cc_load_policy=1&enablejsapi=1&origin=http://davidbau.com/"
 frameborder="0" allow="accelerometer;encrypted-media;gyroscope;picture-in-picture" allowfullscreen></iframe>-->
 <video controls width="448" height="252" poster="video-poster.png" preload="metadata">
-<source src="understanding-video-compact.mp4" type="video/mp4">
+<source src="understanding-video-compact.mp4" type="video/mp4" />
+<track default kind="captions" srclang="en"
+ src="understanding-video-english.vtt" />
 </video>
 <figcaption>Why we study deep network internals.  <nobr>David Bau</nobr> (narrates), with Antonio Torralba, Jun-Yan Zhu, Hendrik Strobelt, Jonas Wulff, and William Peebles. <nobr>Video by Lillie Paquette,</nobr> MIT School of Engineering.</figcaption>
 </figure>
