--- a/src/cv.html
+++ b/src/cv.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <!--
@@ -67,7 +66,7 @@ Lincoln, MA 01773
 </td>
 <td>
 <a href="http://davidbau.com/research/">davidbau.com/research</a><br>
-<a href="mailto:davidbau@csail.mit.edu">davidbau@csail.mit.edu</a><br>
+<a href="mailto:d.bau@northeastern.edu">d.bau@northeastern.edu</a><br>
 +1-781-296-9825
 </td>
 </tr>
@@ -146,7 +145,7 @@ A.B. in Mathematics
 
 <h2 class="main">Employment</h2>
 
-<div class="index">2022-</div>
+<div class="index">2022-current</div>
 <div class="main item">
 <strong>Assistant Professor.</strong> Northeastern Khoury College of Computer Science.
 </div>
