--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<meta http-equiv="refresh" content="1; URL=http://davidbau.com/research/"/> 
+  <!--<meta http-equiv="refresh" content="1; URL=http://davidbau.com/research/"/> -->
 <title>David Bau</title>
 <meta name="description" content="David Bau is a leading rearcher in interpretable deep network methods.">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
